--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "shareme",
   "author": "wangpin",
-  "version": "1.1.1",
-  "description": "share file easily",
+  "version": "1.1.2",
+  "description": "help you sharing someting easily",
   "main": "cmd.js",
   "scripts": {
     "test": "test command",
